# kdesk

./: .gitignore  Makefile  README.md
debian/: changelog  control  copyright  install  kdesk-dbg.install  kdesk.install  libkdesk-dev.install  libkdesk-dev.shlibs  libkdesk-dev.symbols  rules
doc/alert-signal/: icon_exit_sample.sh
doc/config/: .kdeskrc  XCalc.lnk  XEyes.lnk  install-snake.lnk  install-updater.lnk  terminal.lnk
src/: CMakeLists.txt  Makefile  README  background.cpp  background.h  configuration.cpp  configuration.h  desktop.cpp  desktop.h  grid.cpp  grid.h  icon.cpp  icon.h  main.cpp  main.h  sound.cpp  sound.h  ssaver.cpp  ssaver.h  version.h
src/kdesk/: CMakeLists.txt
src/kdesk-blur/: CMakeLists.txt  Makefile  kdesk-blur.cpp  kdesk-blur.h
src/kdesk-blur/src/: kdesk-blur.cpp
src/kdesk-eglsaver/: CMakeLists.txt  Makefile  README  README.md  bitmap_homefolder.raw  bitmap_minecraft.raw  bitmap_pong.raw  hid.cpp  hid.h  kano-homefolder.raw  kdesk-eglsaver.c  make-minecraft.raw
src/kdesk/include/: desktop.h  grid.h  icon.h  version.h
src/kdesk/kfbsaver/: Makefile  kfbsaver.cpp
src/kdesk/src/: background.cpp  desktop.cpp  grid.cpp  icon.cpp  main.cpp  sound.cpp  ssaver.cpp
src/kfbsaver/: README
src/libkdesk/: CMakeLists.txt
src/libkdesk-hourglass/: CMakeLists.txt  Makefile  kdesk-hourglass-app.cpp  kdesk-hourglass.cpp  kdesk-hourglass.h  testdynlib.cpp  testlib.cpp  testlib.py  testmodule.py  testshared.cpp
src/libkdesk-hourglass/python/: hourglass.py
src/libkdesk-hourglass/src/: kdesk-hourglass-app.cpp  kdesk-hourglass.cpp  sn_callbacks.cpp
src/libkdesk-hourglass/tests/: testlib.py
src/libkdesk/include/kdesk/: configuration.h  logging.h  paths.h
src/libkdesk/src/: configuration.cpp
tests/: test_configuration.py
tests/configurations/: kdeskrc_test
